src/cli/snapshots/grove__cli__list__tests__list__basic.snap
---
source: src/cli/list.rs
expression: output
---
── test-repo ──
┌────────────────┬──────────────┬─────────────┬─────────┬───────┐
│ Tag            ┆ Branch       ┆ Base        ┆ Status  ┆ Issue │
╞════════════════╪══════════════╪═════════════╪═════════╪═══════╡
│ alpha          ┆ PROJ-1-alpha ┆ origin/main ┆ clean   ┆ #1    │
│ beta           ┆ PROJ-2-beta  ┆ origin/main ┆ dirty   ┆ #2    │
│ gamma (frozen) ┆ PROJ-3-gamma ┆ origin/main ┆ 3 ahead ┆       │
└────────────────┴──────────────┴─────────────┴─────────┴───────┘
