src/cli/snapshots/grove__cli__list__tests__list__json.snap
---
source: src/cli/list.rs
assertion_line: 462
expression: json
---
{
  "version": 1,
  "repos": [
    {
      "id": "test-repo",
      "projects": [
        {
          "tag": "alpha",
          "path": "/c/work/test",
          "branch": "PROJ-1-alpha",
          "base": "origin/main",
          "issue": 1,
          "frozen": false,
          "created": "1970-01-01T00:00:00Z",
          "status": {
            "dirty": false,
            "ahead": 0,
            "behind": 0,
            "untracked": 0
          }
        },
        {
          "tag": "beta",
          "path": "/c/work/test",
          "branch": "PROJ-2-beta",
          "base": "origin/main",
          "issue": 2,
          "frozen": false,
          "created": "1970-01-01T00:00:00Z",
          "status": {
            "dirty": true,
            "ahead": 0,
            "behind": 0,
            "untracked": 1
          }
        },
        {
          "tag": "gamma",
          "path": "/c/work/test",
          "branch": "PROJ-3-gamma",
          "base": "origin/main",
          "frozen": true,
          "created": "1970-01-01T00:00:00Z",
          "status": {
            "dirty": false,
            "ahead": 3,
            "behind": 0,
            "untracked": 0
          }
        }
      ]
    }
  ]
}
