src/cli/snapshots/grove__cli__list__tests__list__short.snap
---
source: src/cli/list.rs
expression: output
---
test-repo/alpha  PROJ-1-alpha  ✓ clean
test-repo/beta   PROJ-2-beta   ● dirty
test-repo/gamma  PROJ-3-gamma  ↑ 3 ahead
